Fix spacing biertunnel and lichtingfoto paths for windows

--- a/components/lichtingfotos.css
+++ b/components/lichtingfotos.css
@@ -28,7 +28,7 @@
     }
 
     .lichting-balk {
-        width: 100vw;
+        width: 100%;
         height: 30vmin;
     }
 
